modified metrics calculator